[gd_scene load_steps=46 format=2]

[ext_resource path="res://Assets/Magic/FireBlast/Up FB.png" type="Texture" id=1]
[ext_resource path="res://Assets/Magic/FireBlast/Right FB.png" type="Texture" id=2]
[ext_resource path="res://FireAttack.gd" type="Script" id=3]
[ext_resource path="res://Assets/Magic/FireBlast/Down FB.png" type="Texture" id=4]
[ext_resource path="res://Assets/Magic/FireBlast/Left FB.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=94]
animations = [ {
"frames": [ SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ) ],
"loop": false,
"name": "LeftFlame",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=96]
animations = [ {
"frames": [ SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ) ],
"loop": true,
"name": "RightFlame",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=97]
animations = [ {
"frames": [ SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ) ],
"loop": false,
"name": "DownFlame",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=98]
animations = [ {
"frames": [ SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ) ],
"loop": false,
"name": "UpFlame",
"speed": 5.0
} ]

[node name="FireAttack" type="Node2D"]
visible = false
script = ExtResource( 3 )

[node name="FireL" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 2
motion/sync_to_physics = true
moving_platform_apply_velocity_on_leave = 2

[node name="LeftFlame" type="AnimatedSprite" parent="FireL"]
position = Vector2( -37, -20 )
frames = SubResource( 94 )
animation = "LeftFlame"
frame = 8
playing = true
centered = false

[node name="FireR" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 2
motion/sync_to_physics = true
moving_platform_apply_velocity_on_leave = 2

[node name="RightFlame" type="AnimatedSprite" parent="FireR"]
position = Vector2( 27, -4 )
z_index = -1
frames = SubResource( 96 )
animation = "RightFlame"

[node name="FireD" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 2
motion/sync_to_physics = true
moving_platform_apply_velocity_on_leave = 2

[node name="DownFlame" type="AnimatedSprite" parent="FireD"]
position = Vector2( 3, 11 )
z_index = 2
frames = SubResource( 97 )
animation = "DownFlame"
frame = 8
playing = true

[node name="FireU" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 2
motion/sync_to_physics = true
moving_platform_apply_velocity_on_leave = 2

[node name="UpFlame" type="AnimatedSprite" parent="FireU"]
position = Vector2( 3, -22 )
z_index = -1
frames = SubResource( 98 )
animation = "UpFlame"
